force-app/main/default/objects/Contact/fields/ComarchSyncStatusContact__c.field-meta.xml
<CustomField>
    <fullName>ComarchSyncStatusContact__c</fullName>
    <defaultValue>&quot;-&quot;</defaultValue>
    <label>Comarch Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>