force-app/main/default/objects/Contact/fields/ContactInfo__c.field-meta.xml
<CustomField>
    <fullName>ContactInfo__c</fullName>
    <formula>Account.Name + BR() + Text(Salutation) + &apos; &apos; + FirstName  + &apos; &apos; + LastName +BR()+ Account.BillingStreet +BR()+ Account.BillingPostalCode +&apos; &apos;+ Account.BillingCity +BR()+ Account.BillingCountry +BR()+&apos;Tel.: &apos;+ Account.Phone +BR()+&apos;Mobil: &apos;+ MobilePhone +BR()+&apos;Mail: &apos;+ Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactInfo</label>
    <type>Text</type>
</CustomField>