force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Authorized signatory</fullName>
                <isActive>false</isActive>
                <label>Authorized signatory</label>
            </value>
            <value>
                <fullName>Calculation</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Managing Partner</fullName>
                <isActive>false</isActive>
                <label>Managing Partner</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Project management</fullName>
                <label>Project Management</label>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Quality Management</fullName>
            </value>
            <value>
                <fullName>Sales Department</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
                <isActive>false</isActive>
                <label>Shareholder</label>
            </value>
            <value>
                <fullName>Work Preparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>