force-app/main/default/objects/Contact/fields/ExternalComarchContactId__c.field-meta.xml
<CustomField>
    <fullName>ExternalComarchContactId__c</fullName>
    <externalId>true</externalId>
    <label>Comarch Contact Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>