force-app/main/default/objects/Contact/fields/FootballClub__c.field-meta.xml
<CustomField>
    <fullName>FootballClub__c</fullName>
    <label>Football Club</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1. FC Heidenheim 1846</fullName>
            </value>
            <value>
                <fullName>1. FC Köln</fullName>
            </value>
            <value>
                <fullName>1. FC Nürnberg</fullName>
            </value>
            <value>
                <fullName>1. FC Union Berlin</fullName>
            </value>
            <value>
                <fullName>1. FSV Mainz 05</fullName>
            </value>
            <value>
                <fullName>Bayer 04 Leverkusen</fullName>
            </value>
            <value>
                <fullName>Borussia Dortmund</fullName>
            </value>
            <value>
                <fullName>Borussia Mönchengladbach</fullName>
            </value>
            <value>
                <fullName>DSC Arminia Bielefeld</fullName>
            </value>
            <value>
                <fullName>Eintracht Frankfurt</fullName>
            </value>
            <value>
                <fullName>FC Augsburg</fullName>
            </value>
            <value>
                <fullName>FC Bayern München</fullName>
            </value>
            <value>
                <fullName>FC Erzgebirge Aue</fullName>
            </value>
            <value>
                <fullName>FC Hansa Rostock</fullName>
            </value>
            <value>
                <fullName>FC Ingolstadt 04</fullName>
            </value>
            <value>
                <fullName>FC Schalke 04</fullName>
            </value>
            <value>
                <fullName>FC St. Pauli</fullName>
            </value>
            <value>
                <fullName>Fortuna Düsseldorf</fullName>
            </value>
            <value>
                <fullName>Hamburger SV</fullName>
            </value>
            <value>
                <fullName>Hannover 96</fullName>
            </value>
            <value>
                <fullName>Hertha BSC</fullName>
            </value>
            <value>
                <fullName>Holstein Kiel</fullName>
            </value>
            <value>
                <fullName>Karlsruher SC</fullName>
            </value>
            <value>
                <fullName>RB Leipzig</fullName>
            </value>
            <value>
                <fullName>SC Paderborn 07</fullName>
            </value>
            <value>
                <fullName>SG Dynamo Dresden</fullName>
            </value>
            <value>
                <fullName>Sport-Club Freiburg</fullName>
            </value>
            <value>
                <fullName>SpVgg Greuther Fürth</fullName>
            </value>
            <value>
                <fullName>SSV Jahn Regensburg</fullName>
            </value>
            <value>
                <fullName>SV Darmstadt 98</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>