force-app/main/default/objects/Contact/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Ski</fullName>
            </value>
            <value>
                <fullName>Cross-country skiing</fullName>
            </value>
            <value>
                <fullName>Walking</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Diving</fullName>
            </value>
            <value>
                <fullName>Chess</fullName>
            </value>
            <value>
                <fullName>Handball</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Volleyball</fullName>
            </value>
            <value>
                <fullName>Table tennis</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Squash</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Racing</fullName>
            </value>
            <value>
                <fullName>Horse riding</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>