force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
                <isActive>false</isActive>
                <label>Accounting</label>
            </value>
            <value>
                <fullName>Assembly</fullName>
                <isActive>false</isActive>
                <label>Assembly</label>
            </value>
            <value>
                <fullName>Authorized signatory</fullName>
                <label>Authorized Signatory</label>
            </value>
            <value>
                <fullName>Calculation</fullName>
                <isActive>false</isActive>
                <label>Calculation</label>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
                <isActive>false</isActive>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Managing Partner</fullName>
                <isActive>false</isActive>
                <label>Managing Partner</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
                <isActive>false</isActive>
                <label>Operations Manager</label>
            </value>
            <value>
                <fullName>Production</fullName>
                <isActive>false</isActive>
                <label>Production</label>
            </value>
            <value>
                <fullName>Product Management</fullName>
                <isActive>false</isActive>
                <label>Product Management</label>
            </value>
            <value>
                <fullName>Project management</fullName>
                <isActive>false</isActive>
                <label>Project management</label>
            </value>
            <value>
                <fullName>Purchasing</fullName>
                <isActive>false</isActive>
                <label>Purchasing</label>
            </value>
            <value>
                <fullName>Quality Management</fullName>
                <isActive>false</isActive>
                <label>Quality Management</label>
            </value>
            <value>
                <fullName>Sales department</fullName>
                <isActive>false</isActive>
                <label>Sales department</label>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>Work Preparation</fullName>
                <isActive>false</isActive>
                <label>Work Preparation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>