force-app/main/default/objects/Contact/fields/Postal_Code_City__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_City__c</fullName>
    <formula>MailingPostalCode &amp; &quot; &quot; &amp;MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code, City</label>
    <type>Text</type>
</CustomField>