force-app/main/default/objects/Contact/fields/PreferredContactChannel__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactChannel__c</fullName>
    <label>Preferred Contact Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>