force-app/main/default/objects/Contact/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ArchitektIn</fullName>
            </value>
            <value>
                <fullName>BSc.</fullName>
            </value>
            <value>
                <fullName>DI Mag.</fullName>
            </value>
            <value>
                <fullName>Dipl.Ing.</fullName>
                <label>Dipl. Ing.</label>
            </value>
            <value>
                <fullName>Dipl. Ing. (FH)</fullName>
            </value>
            <value>
                <fullName>Dipl.-Ing. Arch (FH)</fullName>
            </value>
            <value>
                <fullName>Dipl.-Ing. ArchitektIn</fullName>
            </value>
            <value>
                <fullName>Dipl. Wirt.-Ing (FH)</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Dr. Dipl. Ing.</fullName>
            </value>
            <value>
                <fullName>Dr. Ing.</fullName>
            </value>
            <value>
                <fullName>Ing.</fullName>
            </value>
            <value>
                <fullName>Ing. Mag.</fullName>
            </value>
            <value>
                <fullName>M.A. Architektin</fullName>
            </value>
            <value>
                <fullName>M. Arch.</fullName>
            </value>
            <value>
                <fullName>Mag.</fullName>
            </value>
            <value>
                <fullName>Mag. Arch.</fullName>
            </value>
            <value>
                <fullName>Mag. MBA</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>Prof. Dipl. Ing.</fullName>
            </value>
            <value>
                <fullName>Prof. Dr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>