force-app/main/default/objects/Contact/validationRules/MobileNumberFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>MobileNumberFormat</fullName>
    <active>true</active>
    <errorConditionFormula>if(!ISBLANK(MobilePhone) &amp;&amp; !ISNULL(MobilePhone),LEFT(MobilePhone, 1) &lt;&gt; &quot;+&quot;,false)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please enter the country code. Example: +49</errorMessage>
</ValidationRule>