force-app/main/default/objects/Contact/validationRules/PhoneNumberFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNumberFormat</fullName>
    <active>true</active>
    <errorConditionFormula>if(!ISBLANK(Phone) &amp;&amp; !ISNULL(Phone),LEFT(Phone, 1) &lt;&gt; &quot;+&quot;,false)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter the country code. Example: +49</errorMessage>
</ValidationRule>