force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ExternalComarchContactId__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/21/2024 12:00 AM</value>
    </filters>
    <label>Alle Kontakte</label>
</ListView>